--- a/wnas.nl-dijkconnect/Versie_1_2_1/FE_Wilfred/frontend-wilfred.html
+++ b/wnas.nl-dijkconnect/Versie_1_2_1/FE_Wilfred/frontend-wilfred.html
@@ -13,7 +13,7 @@
     <meta http-equiv="Content-Script-Type" content="text/javascript" /> 
     <meta http-equiv="Content-Style-Type" content="text/css" /> 
     <script type="text/javascript">//<![CDATA[
-    var ie = false;
+    var ie = true;
     //]]></script> 
 <!--[if IE]>
     <script type="text/javascript">//<![CDATA[
