--- a/wnas.nl-dijkconnect/CC/test24/test24.html
+++ b/wnas.nl-dijkconnect/CC/test24/test24.html
@@ -49,7 +49,7 @@ function clearFocusLabel(ID){
 	<article>
 		<h1>Annie Connect: test24 (terug bellen)</h1>
 		
-			<FORM ACTION="callsheet.html" AUTOCOMPLETE="off" METHOD="post" NAME="callsheet">
+		<FORM ACTION="callsheet.html" AUTOCOMPLETE="off" METHOD="post" NAME="callsheet">
 			<INPUT TYPE="HIDDEN" NAME="annie" VALUE="23314">
 			<INPUT TYPE="HIDDEN" NAME="sleutel" VALUE="">
 			<INPUT TYPE="HIDDEN" NAME="csmode" VALUE="terugbel">
@@ -80,7 +80,9 @@ function clearFocusLabel(ID){
 			<INPUT TYPE="hidden" NAME="kwg" value=""> <!-- Klant weigert gesprek. (resultaat X en opmerking: klant weigert gesprek -->
 			<INPUT TYPE="hidden" NAME="vma" value=""> <!-- Voicemail aangetroffen -->
 			<INPUT TYPE="hidden" NAME="zte" value=""> <!-- Klant Zit Te Eten -->
-		
+			
+			<section>
+				
 <TABLE>
 
 
