--- a/wnas.nl-dijkconnect/CC/test24/test24.html
+++ b/wnas.nl-dijkconnect/CC/test24/test24.html
@@ -48,7 +48,7 @@ function clearFocusLabel(ID){
 <BODY>
 	<article>
 		<h1>Annie Connect: test24 (terug bellen)</h1>
-		
+		<form action="bgla" method="post"><input></form>
 		<FORM ACTION="callsheet.html" AUTOCOMPLETE="off" METHOD="post" NAME="callsheet">
 			<INPUT TYPE="HIDDEN" NAME="annie" VALUE="23314">
 			<INPUT TYPE="HIDDEN" NAME="sleutel" VALUE="">
